# turbulence

./: .gitignore  CMakeLists.txt  Configuration.cpp  Configuration.h  DataStructures.cpp  DataStructures.h  Definitions.h  FlowField.cpp  FlowField.h  FlowFieldLaminar.h  FlowFieldSimulation.h  FlowFieldTurbA.cpp  FlowFieldTurbA.h  GlobalBoundaryFactory.cpp  GlobalBoundaryFactory.h  Iterators.cpph  Iterators.h  LinearSolver.cpp  LinearSolver.h  Makefile  MemoizedMesh.cpp  MemoizedMesh.h  Meshsize.cpp  Meshsize.h  MeshsizeFactory.h  MultiTimer.h  Parameters.h  README.md  SimpleTimer.cpp  SimpleTimer.h  Simulation.h  SimulationLaminar.h  SimulationTurbA.h  Stencil.h  conf_cavity.xml  conf_channel.xml  main.cpp  petsc_commandline_arg  x-velocity.csv
geometries/: airfoil-geo.txt  channel-geo.txt  conf_channel_circle_a-geo.txt
iterators/: BottomTopBoundaryIterator.h  FrontBackBoundaryIterator.h  LeftRightBoundaryIterator.h  RangeIterator.h
parallelManagers/: MPICommunicator.h  PetscParallelConfiguration.cpp  PetscParallelConfiguration.h
petsc_args/: optimized  original
reports/: .gitignore
reports/presentation/: presentation.tex
reports/projectReport/: .my_bachelor_thesis.lb  .project  .texlipse  .tm_properties  TDreport.sty  chapters.tex  header.tex  nomenclature.fdb_latexmk  nomenclature.fls  nomenclature.nlo  nomenclature.tex  projectReport.bbl  projectReport.bib  projectReport.bib.bak  projectReport.bib~  projectReport.blg  projectReport.fdb_latexmk  projectReport.fls  projectReport.ilg  projectReport.lof  projectReport.nlo  projectReport.tex  projectReport.toc  titlepage.sty
reports/sheet-2/: hpc-turb.tex  vals.txt
scenarios/: airfoil.xml  bfAturb_00_coarse.xml  bfLaminar_00_coarse.xml  bfs.xml  boundary.xml  channel.xml  channel_0_1000.xml  channel_0_13750.xml  channel_0_5600.xml  channel_2_1000.xml  channel_2_13750.xml  channel_2_5600.xml  channel_chris.xml  channel_circle.xml  channel_marten.xml  channel_symm.xml  conf_channel_circle_a.xml  conf_channel_ke.xml  conf_channel_mpi.xml  josef.xml  scenario1000.xml  scenario13750.xml  scenario5600.xml
scenarios/airfoil/: airfoil.geo  airfoil.xml
scenarios/bfs/: bfStep_Re00_dns.xml  bfs.699.bak
scenarios/boundary/: boundary_ke02_Re13750.xml
scenarios/cavity/: cavity.xml
scenarios/channel-symm-ke/: scenario1000.xml  scenario13750.397.bak  (+3 more)
scripts/: format  optimize
solvers/: PetscSolver.cpp  PetscSolver.h  SORSolver.cpp  SORSolver.h
src/: main.cpp
src/nseof/: CMakeLists.txt  Configuration.cpp  Configuration.h  DataStructures.cpp  DataStructures.h  Definitions.h  FlowField.cpp  FlowField.h  FlowFieldLaminar.cpp  FlowFieldLaminar.h  FlowFieldSimulation.h  FlowFieldTurbA.cpp  FlowFieldTurbA.h  GlobalBoundaryFactory.cpp  GlobalBoundaryFactory.h  Iterators.cpph  Iterators.h  LinearSolver.cpp  LinearSolver.h  MemoizedMesh.cpp  MemoizedMesh.h  Meshsize.cpp  Meshsize.h  MeshsizeFactory.h  MultiTimer.cpp  MultiTimer.h  Parameters.h  Point.h  SimpleTimer.cpp  SimpleTimer.h  Simulation.h  SimulationLaminar.h  SimulationTurbA.h  Stencil.h  main.cpp
src/nseof/flowmodels/algebraic/: FGHStencil.cpp  FGHStencil.h  FlowField.cpp  FlowField.h  HStencil.cpp  HStencil.h  MaximumNutStencil.cpp  MaximumNutStencil.h  MinimumNutStencil.cpp  MinimumNutStencil.h  NutStencil.cpp  NutStencil.h  Simulation.h
src/nseof/flowmodels/ke/: BFInputStencils.cpp  BFInputStencils.h  FlowField.cpp  FlowField.h  GlobalBoundaryFactory.cpp  GlobalBoundaryFactory.h  InitStencil.cpp  InitStencil.h  KEStencil.cpp  KEStencil.h  KEStencilF.cpp  KEStencilF.h  NutStencil.cpp  NutStencil.h  ObstacleStencil.cpp  ObstacleStencil.h  PredicateStencil.h  RHSStencil.cpp  RHSStencil.h  Simulation.h
src/nseof/flowmodels/laminar/: FlowField.cpp  FlowField.h  Simulation.h
src/nseof/flowmodels/turbulent/: FGHStencil.cpp  FGHStencil.h  FlowField.cpp  FlowField.h  HStencil.cpp  HStencil.h  MaximumNutStencil.cpp  MaximumNutStencil.h
src/nseof/geometry/: GeometryManager.cpp  GeometryManager.h
src/nseof/hdf5/: HDF5.cpp  HDF5.h  HDF5Plotter.cpp  HDF5Plotter.h  XDMF.cpp  XDMF.h
src/nseof/iterators/: BottomTopBoundaryIterator.h  FrontBackBoundaryIterator.h  LeftRightBoundaryIterator.h  ParallelBoundaryIterator.h  RangeIterator.h
src/nseof/parallelManagers/: MPICommunicator.h  PetscParallelConfiguration.cpp  PetscParallelConfiguration.h
src/nseof/plotting/: LambdaReader.h  Reader.h
src/nseof/restart/: MPIIterator.h  MPIIteratorRead.h  MPIIteratorWrite.h
src/nseof/solvers/: PetscSolver.cpp  PetscSolver.h  SORSolver.cpp  SORSolver.h
src/nseof/stencils/: BFInputStencils.cpp  BFInputStencils.h  BFStepInitStencil.cpp  BFStepInitStencil.h  BoundaryReadStencil.h  BoundaryWriteStencil.h  CellDataStencil.h  FGHStencil.cpp  FGHStencil.h  FGHStencilTurb.cpp  FGHStencilTurb.h  HStencil.cpp  HStencil.h  InitTaylorGreenFlowFieldStencil.h  MaxUStencil.cpp  MaxUStencil.h  MinimumNutStencil.cpp  MinimumNutStencil.h  MovingWallStencils.cpp  MovingWallStencils.h  NeumannBoundaryStencils.cpp  NeumannBoundaryStencils.h  NutStencil.cpp  NutStencil.h  ObstacleStencil.cpp  ObstacleStencil.h  PeriodicBoundaryStencils.cpp  PeriodicBoundaryStencils.h  RHSStencil.cpp  RHSStencil.h  StencilFunctions.h  VelocityStencil.cpp  VelocityStencil.h
src/nseof/walldistance/: WallDistanceManager.cpp  WallDistanceManager.h
stencils/: BFInputStencils.cpp  BFInputStencils.h  BFStepInitStencil.cpp  BFStepInitStencil.h  CellDataStencil.h  FGHStencil.cpp  FGHStencil.h  FGHStencilTurb.cpp  FGHStencilTurb.h  HStencil.cpp  HStencil.h  InitTaylorGreenFlowFieldStencil.h  MaxUStencil.cpp  MaxUStencil.h  MinimumNutStencil.h  MovingWallStencils.cpp  MovingWallStencils.h  NeumannBoundaryStencils.cpp  NeumannBoundaryStencils.h  NutStencil.cpp  NutStencil.h  ObstacleStencil.cpp  ObstacleStencil.h  PeriodicBoundaryStencils.cpp  PeriodicBoundaryStencils.h  RHSStencil.cpp  RHSStencil.h  StencilFunctions.h  TimestepStencil.cpp  TimestepStencil.h  VTKStencil.cpp  VTKStencil.h  VelocityStencil.cpp  VelocityStencil.h
vtk/: CMakeLists.txt  Dataset.h  File.cpp  File.h
walldistance/: WallDistanceManager.h
(+313 files in other folders)
